# agent-bench

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  serve_vllm.sh
.github/workflows/: ci.yml
results/gsm8k_gpt4o-mini_smoke/gpt-4o-mini/: results_2025-08-24T01-02-33.913065.json
scripts/: llm_eval.py  ping_local.sh  run_bench.py  run_benchmarks.sh  serve_local_qwen7b.sh  serve_vllm.sh  setup_env.sh  vllm_bench.py  vllm_smoke.py
src/agent/: config.py  prompts.py
src/agent/llm/: openai_llm.py
src/agent/policies/: react.py
src/agent/runtime/: executor.py  executor.py.bak.1756074975  executor.py.bak.1756075247  llm_client.py  planner.py  router.py
src/agent/tools/: calculator.py  clock.py  echo.py  help_tool.py  python_repl.py  retrieval.py  stringy.py  uuid_tool.py  weather.py
src/evals/: run_lm_eval.py
src/ui/: cli.py
tests/: test_calculator.py  test_cli_chain.py  test_cli_flags.py  test_cli_json.py  test_clock.py  test_executor_cli.py  test_more_tools.py  test_router_autodiscover.py  test_stringy.py
